--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,9 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Suggests: 
-    knitr,
-    rmarkdown
+  knitr,
+  rmarkdown,
+  bookdown,
+  tidyverse,
+  ggplot2
 VignetteBuilder: knitr
